# MiniRAG-V

./: .gitignore  README.md  config.yaml  pyproject.toml  run.py
scripts/: data_cleaner.py  eval_vlm.py  init_milvus_collections.py  kb_data_cleaner.py  trainer_utils.py
src/: config.py  main.py
src/api/: __init__.py  responses.py  routes.py  schemas.py
src/inference/: model_minimind.py  model_vlm.py
src/milvus/: client.py  connection.py  manager.py  model.py
src/services/: __init__.py  ai_service.py  base.py  image_embedding_service.py  search_service.py  system_service.py  text_embedding_service.py  vlm_inference_service.py
tests/: test_api.py
